# cmake-testing

./: .clang-format  .gitmodules  CMakeLists.txt  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake
src/app/: main.cpp
src/https/: CMakeLists.txt  https_client.cpp  https_client.h
tests/: test_json.cpp
